--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
+  "type": "module",
   "name": "distance",
   "version": "1.0.0",
   "description": "json file",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode=production",
-    "watch": "webpack --watch --mode=development"
+    "watch": "webpack --watch --mode=development",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,14 @@
   },
   "homepage": "https://github.com/Listopad02/distance#readme",
   "devDependencies": {
+    "@babel/cli": "^7.17.0",
+    "@babel/core": "^7.17.0",
+    "@babel/node": "^7.16.8",
+    "@babel/plugin-transform-modules-commonjs": "^7.16.8",
+    "@babel/preset-env": "^7.16.11",
+    "firebase-functions-test": "^0.3.3",
+    "jest": "^27.5.0",
+    "mocha": "^9.2.0",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.1"
   },
